# dayz-tool-cli

./: Cargo.toml  README.md
.github/workflows/: main.yaml
src/: lib.rs  main.rs
src/commands/: dnc.rs  guid.rs  mod.rs  mods.rs  profile.rs  startup.rs
src/generators/: guid.rs  mod.rs
src/utils/: config.rs  log.rs  mod.rs  mods.rs
templates/: start_server.bat.tempate  start_server.bat.template  start_server.sh.template
