[package]
name = "dayz-tool-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
inquire = "0.7.5"
lazy_static = "1.5.0"
log = "0.4.22"
num_cpus = "1.16.0"
quick-xml = { version = "0.37.0", features = ["serialize"] }
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.132"
sha2 = "0.10.8"
simplelog = "0.12.2"
thiserror = "1.0.65"
